# cuda_path_tracer

./: .gitignore  Bug.md  BugFix.md  CMakeLists.txt  LICENSE  README.md  build.bat
core/: Accel.hpp  Actor.hpp  BBox.hpp  BVH.h  Geometry.hpp  Intersection.hpp  Material.hpp  Mesh.hpp  Point.hpp  Ray.hpp  Render.h  Scene.h  Texture.hpp  Triangle.hpp  TriangleIndices.hpp
core/kernel/: BVH.cu  Render.cu  Scene.cu
core/src/: BVH.cpp
include/: common.h  matrix.h  pch.h  types.h
output/: binary1024.ppm  binary256.ppm  binary512.ppm
rc/test/: rbt.hipnc
rc/test/backup/: rbt_bak2.hipnc  rbt_bak3.hipnc
test/: CMakeLists.txt  test.cpp  test_bvh_cuda.cpp  test_load_mesh.cu
utils/: Loader.hpp
